--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 @import "tailwindcss";
 @plugin "daisyui";
 
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
+
 .active{
     text-decoration: underline;
     color: lightblue;
