--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
 @import "tailwindcss";
 @plugin "daisyui";
 
+  @import "tailwindcss";
+ @plugin "daisyui";
+ @plugin "daisyui" {
+   themes: light --default, dark --prefersdark;
+ }
+
+ @tailwind base;
+@tailwind components;
+@tailwind utilities;
